cilium/httpIngress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  ingressClassName: cilium
  rules:
    - host: hubble.rickli.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
